[package]
name = "juice"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
padme-core = { git = "https://github.com/shaoner/padme-core.git", version = "0.0.0" }
spin = { version = "0.9.8", default-features = false, features = [
    "lazy",
    "spin_mutex",
] }
